2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: If AutoSize changes the size of our item, invalidate
	so we repaint using the new size.  [Fixes bug #82723]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: If ShowLines is true, we should ignore the FullRowSelect
	option.  [Fixes bug #81779]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Override HandleClick because the StandardClick style is
	set to false.  According to MSDN (and testing), the click events should
	only be raised when the click occurs on a TreeNode.  [Fixes bug #81739]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBox.cs: Invalidate our textbox when it loses focus, so
	the border will disappear.  Fixes reopened #82653.

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: If the control is autosize, and its preferred size changes
	when it lays out its children, tell its parent so it can be re-layed out.
	Fixing some of the fallout from r85433.

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Fix a NRE caused by r85427 because RadioButton
	and CheckBox share some code.

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TrackBar.cs: Only call OnScroll if we actually changed the Value of
	the TrackBar, not every mouse move.  [Fixed bug #82718]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Allow a CheckBox to be rendered like a Button
	under 2.0 rendering.  [Fixes bug #82657]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: If we found a TreeNode to display a context menu, but
	it doesn't have one to show, let the TreeView display its menu
	instead.  [Fixes bug #82680]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBox.cs: TextBox no longer call OnPaint, we need to use
	OnPaintInternal instead.  Give the internal TextBox a Border property
	so it can draw itself more correctly.  [Fixes bug #82653]
